[tool.poetry]
name = "vespio"
version = "0.1.0"
description = ""
authors = ["lucianistrati <lucianistrati@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
azure-cognitiveservices-speech = "^1.35.0"
google-cloud = "^0.34.0"
wave = "^0.0.2"
matplotlib = "^3.8.2"
transformers = "^4.37.2"
statistics = "^1.0.3.5"
gensim = "^4.3.2"
rake-nltk = "^1.0.6"
language-tool-python = "^2.7.1"
spellchecker = "^0.4"
pydub = "^0.25.1"
nltk = "^3.8.1"
textblob = "^0.17.1"
spacy = "^3.7.2"
librosa = "^0.10.1"
wordcloud = "^1.9.3"
moviepy = "^1.0.3"
google = "^3.0.0"
plotly = "^5.18.0"
speechrecognition = "^3.10.1"
pocketsphinx = "^5.0.3"
torch = "^2.2.0"
openai = "^1.12.0"
python-dotenv = "^1.0.1"
boto3 = "^1.34.41"
noisereduce = "^3.0.0"
textstat = "^0.7.3"
altair = "^5.2.0"
pytube = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
